# cses

./: .gitignore  .replit  CMakeLists.txt  compile.sh  replit.nix
src/: 001-weirdAlgorithm.cpp  002-missingNumber.cpp  003-repetitions.cpp  004-increasingArray.cpp  005-permutations.cpp  006-numberSpiral.cpp  007-twoKnights.cpp  008-twoSets.cpp  009-bitStrings.cpp  010-trailingZeros.cpp
