cmake_minimum_required(VERSION 3.00)
project(cses)

set(CMAKE_CXX_FLAGS "${CMAME_CXX_FLAGS} -Wall")
set(CMAKE_CXX_STANDARD 20)
set(source_dir src)

add_executable(001 ${source_dir}/001-weirdAlgorithm.cpp)
add_executable(002 ${source_dir}/002-missingNumber.cpp)
add_executable(003 ${source_dir}/003-repetitions.cpp)
add_executable(004 ${source_dir}/004-increasingArray.cpp)
add_executable(005 ${source_dir}/005-permutations.cpp)
add_executable(006 ${source_dir}/006-numberSpiral.cpp)
add_executable(007 ${source_dir}/007-twoKnights.cpp)
add_executable(008 ${source_dir}/008-twoSets.cpp)
add_executable(009 ${source_dir}/009-bitStrings.cpp)
add_executable(010 ${source_dir}/010-trailingZeros.cpp)
add_executable(011 ${source_dir}/011-coinPiles.cpp)